--- a/style.css
+++ b/style.css
@@ -65,11 +65,11 @@ button {
 }
 
 button:hover {
-    opacity: .5;
+    opacity: 0.5;
 }
 
 button:active {
-    opacity: .8;
+    opacity: 0.8;
 }
 
 a {
